# naecipe_backend

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  SPECKIT_TODO.md  pyproject.toml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
alembic/versions/: 008_create_saved_recipes_table.py
app/: __init__.py  main.py
app/ai_agent/: __init__.py
app/analytics/: __init__.py
app/cookbooks/: __init__.py  exceptions.py  models.py  router.py  schemas.py  services.py
app/core/: __init__.py  config.py  dependencies.py  exceptions.py  logging.py  schemas.py  security.py
app/infra/: __init__.py  database.py  redis.py
app/ingestion/: __init__.py
app/knowledge/: __init__.py
app/notifications/: __init__.py
app/recipes/: __init__.py  models.py  router.py  schemas.py  services.py
app/users/: __init__.py  models.py  oauth_providers.py  router.py  schemas.py  services.py
docker/: docker-compose.yml
scripts/: dev.sh  setup.sh
services/ai-agent-service/: Dockerfile  pyproject.toml
services/analytics-service/: Dockerfile  pyproject.toml
services/cookbook-service/: Dockerfile  pyproject.toml
services/notification-service/: Dockerfile  pyproject.toml
services/notification-service/src/notification_service/: __init__.py  main.py
services/notification-service/src/notification_service/api/: __init__.py
services/notification-service/src/notification_service/core/: __init__.py  config.py
services/notification-service/src/notification_service/models/: __init__.py
services/notification-service/src/notification_service/schemas/: __init__.py
services/notification-service/src/notification_service/services/: __init__.py
services/notification-service/tests/: conftest.py
services/notification-service/tests/contract/: __init__.py
services/notification-service/tests/integration/: __init__.py
services/notification-service/tests/unit/: __init__.py
services/recipe-service/: Dockerfile  alembic.ini  pyproject.toml
services/recipe-service/alembic/: env.py
services/recipe-service/alembic/versions/: 001_initial_schema.py  002_search_indexes.py
services/recipe-service/src/recipe_service/: __init__.py  database.py  logging_config.py  main.py
services/recipe-service/src/recipe_service/api/: __init__.py  chefs.py  health.py  recipes.py  search.py
services/recipe-service/src/recipe_service/cache/: __init__.py  redis_cache.py
services/recipe-service/src/recipe_service/core/: __init__.py  config.py
services/recipe-service/src/recipe_service/middleware/: __init__.py  error_handler.py
services/recipe-service/src/recipe_service/models/: __init__.py  base.py  chef.py  ingredient.py  recipe.py  step.py  tag.py
services/recipe-service/src/recipe_service/schemas/: __init__.py  chef.py  common.py  pagination.py  recipe.py  search.py
services/recipe-service/src/recipe_service/services/: __init__.py  chef_service.py  recipe_service.py  search_service.py
services/recipe-service/src/recipe_service/utils/: __init__.py  cursor.py
services/recipe-service/tests/: __init__.py  conftest.py
services/recipe-service/tests/contract/: __init__.py  test_chefs_api.py  test_recipes_api.py  test_search_cache.py  test_search_filter.py  test_search_keyword.py  test_search_pagination.py  test_search_sort.py
services/recipe-service/tests/integration/: test_full_journey.py  test_search_filter.py  test_search_keyword.py  test_search_pagination.py  test_search_sort.py
services/recipe-service/tests/unit/: __init__.py  test_chef_service.py  test_recipe_service.py
services/user-service/: Dockerfile  (+4 more)
shared/: __init__.py  pyproject.toml
shared/proto/: __init__.py
shared/schemas/: __init__.py  base.py  health.py
shared/utils/: __init__.py  logging.py  pagination.py  settings.py
tests/: conftest.py
(+229 files in other folders)
